Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4367

[clang-analyzer] memory leaks in mgmt/api

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • Logging, Management API
    • None

    Description

      Bug Group Bug Type File Function/Method Line
      Memory Error Memory leak mgmt/api/GenericParser.cc cacheParse 363
      Memory Error Memory leak mgmt/api/GenericParser.cc socksParse 660
      Memory Error Memory leak mgmt/api/GenericParser.cc splitdnsParse 744

      Attachments

        Issue Links

          Activity

            People

              bcall Bryan Call
              gancho Gancho Tenev
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: