TS-4367: Failed clang-analyzer, memory leak in mgmt/api

(cherry picked from commit 1cff52240584e5e6dccee63a02ab70ce61a961a2)